--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -61,8 +61,7 @@
                         <div class="ui calendar full-width" id="dateF">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null"
-                                    placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                                <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
                             </div>
                         </div>
                     </div>
@@ -74,8 +73,7 @@
                             <div class="ui calendar full-width" id="dateT">
                                 <div class="ui input left icon">
                                     <i class="calendar alter nate outline icon"></i>
-                                    <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null"
-                                        placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                                    <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
                                 </div>
                             </div>
                         </div>
@@ -92,7 +90,12 @@
     </div>
 </div>
 
-<div class="ui segment">
+<br>
+
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>ผลการค้นหารายการคุมเช็ค </span>
+</div>
+<div class="ui attached segment">
     <table id="dataTable" class="ui small celled table striped selectable display nowrap" style="width: 100%;">
         <thead>
             <tr>
@@ -110,7 +113,7 @@
 
     <div class="ui grid">
         <div class="sixteen wide center aligned column">
-            <button class="ui mini yellow button" (click)="exportFile()" [disabled]="dataInTable.length == 0">
+            <button class="ui mini yellow button" (click)="exportFile()">
                 <i class="print icon"></i>ส่งออก
             </button>
         </div>
