--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9.component.html
@@ -83,35 +83,36 @@
         </form>
     </div>
 </div>
+<br>
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>ผลการค้นหารายการโอนเงิน</span>
+</div>
+<div class="ui attached segment">
+    <table class="ui small celled table striped selectable" style="width: 200%" id="datatable">
+        <thead>
+            <tr style="text-align: center;">
+                <th rowspan="2">ลำดับที่</th>
+                <th colspan="3">เอกสารอ้างอิง</th>
+                <th rowspan="2">รายการโอนเงิน</th>
+                <th rowspan="2">ประเภทเงิน</th>
+                <th rowspan="2">รหัสเงิน</th>
+                <th rowspan="2">กิจกรรม</th>
+                <th rowspan="2">งบ</th>
+                <th rowspan="2">หมวด</th>
+                <th rowspan="2">หมวดย่อย</th>
+                <th rowspan="2">รายการ</th>
+                <th rowspan="2">จำนวนเงิน</th>
+                <th rowspan="2">หมายเหตุ</th>
+                <th rowspan="2">จัดการ</th>
 
-<div class="ui segment" id="int069">
-    <div>
-        <table class="ui small celled table striped selectable" style="width: 200%" id="datatable">
-            <thead>
-                <tr style="text-align: center;">
-                    <th rowspan="2">ลำดับที่</th>
-                    <th colspan="3">เอกสารอ้างอิง</th>
-                    <th rowspan="2">รายการโอนเงิน</th>
-                    <th rowspan="2">ประเภทเงิน</th>
-                    <th rowspan="2">รหัสเงิน</th>
-                    <th rowspan="2">กิจกรรม</th>
-                    <th rowspan="2">งบ</th>
-                    <th rowspan="2">หมวด</th>
-                    <th rowspan="2">หมวดย่อย</th>
-                    <th rowspan="2">รายการ</th>
-                    <th rowspan="2">จำนวนเงิน</th>
-                    <th rowspan="2">หมายเหตุ</th>
-                    <th rowspan="2">จัดการ</th>
-
-                </tr>
-                <tr style="text-align: center;">
-                    <th>ที่ กค</th>
-                    <th>เลขที่</th>
-                    <th>ว.ด.ป</th>
-                </tr>
-            </thead>
-        </table>
-    </div>
+            </tr>
+            <tr style="text-align: center;">
+                <th>ที่ กค</th>
+                <th>เลขที่</th>
+                <th>ว.ด.ป</th>
+            </tr>
+        </thead>
+    </table>
     <br>
     <div class="ui center aligned grid">
         <div class="sixteen wide column">
