--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -112,7 +112,12 @@
 
     <div class="ui grid">
         <div class="sixteen wide center aligned column">
-            <button class="ui mini yellow button " (click)="exportFile()"><i class="print icon"></i>ส่งออก</button>
+            <button class="ui mini yellow button " (click)="export()"><i class="print icon"></i>ส่งออก</button>
         </div>
     </div>
 </div>
+
+<!-- form-data-excel -->
+<form id="form-data-excel" method="POST"> 
+    <input type="hidden" name="dataJson" id="dataJson">
+</form>
