--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -54,9 +54,9 @@
                 <i class="dropdown icon "></i> ตรวจสอบรายได้
                 <div class="menu ">
                     <a class="item " [routerLink]="[ '/int08/4'] " *ngIf="authService.renderByPage('int08/4')" routerLinkActive="active ">การตรวจสอบใบเสร็จเสีย</a>
-                    <a class="item " [routerLink]="[ '/int08/5'] " *ngIf="authService.renderByPage('int08/5')" routerLinkActive="active ">ติดตามผลการตรวจสอบ</a>
+                    <!-- <a class="item " [routerLink]="[ '/int08/5'] " *ngIf="authService.renderByPage('int08/5')" routerLinkActive="active ">ติดตามผลการตรวจสอบ</a> -->
                     <a class="item " [routerLink]="[ '/int08/6'] " *ngIf="authService.renderByPage('int08/6')" routerLinkActive="active ">การตรวจสอบการนำส่งเงินบัญชี</a>
-                    <a class="item " [routerLink]="[ '/int08/7'] " *ngIf="authService.renderByPage('int08/7')" routerLinkActive="active ">การตรวจสอบรายงานการตรวจ</a>
+                    <a class="item " [routerLink]="[ '/int08/7'] " *ngIf="authService.renderByPage('int08/7')" routerLinkActive="active ">รายงานการตรวจสอบ</a>
                     <!-- <a class="item " [routerLink]="[ '/int01/1/1'] " *ngIf="authService.renderByPage('int01/1/1')" routerLinkActive="active "
                         style=" color:White ">ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</a>
                     <a class="item " [routerLink]="[ '/int01/2/1'] " *ngIf="authService.renderByPage('int01/2/1')" routerLinkActive="active "
