--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010200/tsl010200.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010200/tsl010200.component.html
@@ -19,8 +19,8 @@
             </div>
             <div class="item">
               <div class="menu">
-                <a class="item hover">ความแตกต่างของการชำระภาษี มากกว่า </a>
-                <a class="item hover">ความแตกต่างของการชำระภาษี น้อยกว่า</a>
+                <a class="item hover">ความแตกต่างของการชำระภาษี มากกว่า {{deff.percent1}}</a>
+                <a class="item hover">ความแตกต่างของการชำระภาษี น้อยกว่า {{deff.percent2}}</a>
                 <a class="item hover">อื่นๆ</a>
               </div>
             </div>
