--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010100/tsl010100.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010100/tsl010100.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">การคัดเลือกลาย</h2>
+    <h2 class="ui header">การคัดเลือกราย</h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
       <span>กำหนดเงื่อนไขคัดเลือกรายผู้ประกอบการ</span>
